# algogene_package

./: .gitignore  README.md  app-krane.yaml  deploy.web.sh  gae-deploy-flow.yml  krane.app.yaml  pyproject.toml  requirements.txt  setup.py
.github/actions/: action.yaml
.github/workflows/: gae-deploy-flow.yml.disabled  pypi-deploy-flow.yml
algogene/: README.md
algogene.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
genesequence/: README.md  license.txt  setup.cfg
installers/: linux.txt  macOS.txt  windows.txt
src/krane/: README.md  __init__.py
src/krane/cli/: commands.py
src/krane/web/: app.py
src/krane/web/templates/: index.html
tests/: test_cli.py
