[metadata]
name = genesequence
version = 1.0.0
author = callis Ezenwaka
author_email = callisezenwaka@outlook.com
description = A lightweight Bioinformatics Python package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/callezenwaka/genesequence_package
project_urls =
    Bug Tracker = https://github.com/callezenwaka/genesequence_package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src